--- a/public/plantmonitor.html
+++ b/public/plantmonitor.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plant Page</title>
-    <link rel="stylesheet" href="css/styles.css">// styles 
+    <link rel="stylesheet" href="css/styles.css"> <!--styles -->
 </head>
 <body>
     <header>
-        <h1>Welcome to the Plant Page for monitoring</h1>// Main header 
+        <h1>Welcome to the Plant Page for monitoring</h1><!--Main header --> 
     </header>
     <main>
         <p>Some text here </p>
     </main>
-    <script src="js/scripts.js"></script>// for interactivity
+    <script src="js/scripts.js"></script><!--for interactivity--> 
 </body>
 </html>
