--- a/public/users.html
+++ b/public/users.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Page</title>
-    <link rel="stylesheet" href="css/styles.css">// styles 
+    <link rel="stylesheet" href="css/styles.css"> <!--styles--> 
 </head>
 <body>
     <header>
-        <h1>User Page </h1>// Main header 
+        <h1>User Page </h1> <!--Main header-->
     </header>
     <main>
         <p>Some text here </p>
     </main>
-    <script src="js/scripts.js"></script>// for interactivity
+    <script src="js/scripts.js"></script> <!--for interactivity-->
 </body>
 </html>
